# SSPL_AI-ML-Internship-Daily-Log

./: .gitignore  README.md
10 July 2025/Research_Agent/: README.md  main.py  requirements.txt
11 July 2025/Travel_Planner_Agent/: .gitignore  README.md  main.py  requirements.txt  streamlit_app.py
15 July 2025/Simple_Q&A_Agent/: Agent_with_Langchain.ipynb  README.md  requirements.txt
16 May 2025/: README.md
16 May 2025/Inventory Tracker/: README.md  main.py  requirements.txt  schema.sql
16 May 2025/Library_Management_System/: .gitignore  README.md  main.py  schema.sql
16 May 2025/Student Management System/: README.md  main.py  schema.sql
16-18 June 2025/: README.md
16-18 June 2025/Mumbai_property_data_with_ts/: main.ipynb  mumbai_property_data_with_TS.csv  requirements.txt
17 July 2025/Chatbot_Agent/: .dockerignore  README.md
19 May 2025/: README.md  connect_db_1.py  crud_operations_2&3.py  user.db
19- 26 June 2025/Food_Delivery_Prediction/: Final_test_data_with_Predictions.csv
20 May 2025/Library_Management_System[SQLAlchemy]/: create_db.py  main.py
21 July 2025/Multi_Agents/: .gitignore  README.md  requirements.txt
24 July 2025/mcp-server-db/: .gitignore  README.md  company.db  database.py  main.py  pyproject.toml  requirements.txt  server.py
24 July 2025/mcp-server-db/Server/: client.py  constants.py  mcp.json
24 July 2025/mcp-server-db/resources/: users.py
24 July 2025/mcp-server-db/tools/: users.py
28 May 2025/: .gitignore  README.md
3 June 2025/: README.md
5 June 2025/: README.md
Weekly_Task_22-23may/: .gitignore  README.md
(+91 files in other folders)
