[project]
name = "mcp-server-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "email-validator>=2.2.0",
    "langchain-groq>=0.3.6",
    "mcp-server>=0.1.4",
    "mcp-use>=1.3.7",
    "mcp[cli]>=1.12.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
